Updated Navbar Item Styling

--- a/src/scss/myroot.scss
+++ b/src/scss/myroot.scss
@@ -81,3 +81,4 @@ nav.navbar img{margin: 5px; width: 25px;}
 hr{border: unset; height: 2px;}
 .link.is-info{color:$black}
 table.table tr th {color:white;}
+div#currentPageNavbar{border-radius: 5px;}
